Extract generic PausableFluxBridge for push-to-reactive backpressure bridging